--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -122,13 +122,13 @@ ggplot(comp.pc)+
 	geom_text_repel(data=labels,aes(label=region),color='black',direction='x',seed =0)+
 	scale_y_log10(breaks=round(filter(template,rate==2)$valpc,6),
 								# label=scales::label_percent()
-								)+
+	)+
 	scale_x_continuous(breaks=pretty_breaks(10))+
 	coord_cartesian(ylim=c(start_val,.002))+
 	labs(y='confirmed cases per capita (log scale)',
 			 x=paste0('Days since ', 
-			 				format(start_val*100,scientific=F,digits=4),
-			 				'% of the population infected'))
+			 				 format(start_val*100,scientific=F,digits=4),
+			 				 '% of the population infected'))
 ```
 
 
@@ -205,7 +205,7 @@ rate<-  	inner_join(confirmed %>% filter(date==max(date)) %>%  group_by(region) 
 										deaths %>%filter(date==max(date)) %>%  group_by(region) %>% summarize(deaths=sum(val)),
 										by = c("region")) %>%
 	# inner_join(recovered %>%filter(date==max(date)) %>%  group_by(region) %>%	summarize(recovered=sum(val)),
-						 # by = c("region")) %>%
+	# by = c("region")) %>%
 	# filter(region!='Cruise Ship' ) %>%
 	# mutate(region=ifelse(region=='Korea, South',"S.Korea",region)) %>%
 	filter(deaths>0) %>% 
@@ -391,7 +391,7 @@ ggplot(inner_join(ma.demo,ma.gov.deaths,by='demo'))+
 
 ma.deaths<-suppressMessages(
 	read_csv('https://raw.githubusercontent.com/b-lev/massachusetts-covid19-report-archive/master/deaths.csv')
-	)%>%
+)%>%
 	mutate(date=mdy(date))
 
 ggplot(ma.deaths)+
@@ -480,7 +480,7 @@ tmp<- covid %>% filter(region=='US',type=='deaths',val>100) %>%
 
 ggplot(tmp )+
 	aes(date,val,color='actual')+
-		scale_x_date(breaks="3 days",date_labels = "%m/%d")+
+	scale_x_date(breaks="3 days",date_labels = "%m/%d")+
 	scale_y_continuous(breaks=pretty_breaks(10))+
 	geom_point(size=2)+geom_line(size=1)+
 	# geom_smooth(method='lm',aes(color='linear fit'))+
@@ -576,15 +576,31 @@ ggplot(testing %>% select(date,total_per_cap,state) %>% na.omit)+
 	theme(legend.position = 'none',
 				axis.text.x = element_text(angle = 90, vjust = .5))+
 	geom_text_repel(data=labels,aes(label=state,x=date+8),
-									 nudge_x=1,
-									 seed=0,
-									 direction='x')+
+									nudge_x=1,
+									seed=0,
+									direction='x')+
 	scale_x_date(breaks=pretty_breaks(10))+
 	scale_y_continuous(label=percent,breaks=pretty_breaks(10))+
 	labs(y="Cumulative perc. of state population tested",x="")
 
 
 ```
+
+```{r weekday-drop}
+# 
+tmp<- ct %>% filter(!is.na(death),death>0) %>% group_by(date,day=paste(wday(date),weekdays(date))) %>% summarize(val=sum(death)) %>%
+	ungroup %>%
+	mutate(delta=val-lag(val,1),ratio=delta/lag(delta,1))
+
+ggplot(	tmp)+
+	aes(day,ratio)+
+	scale_x_discrete()+
+	scale_y_continuous(limits = c(0,NA))+
+# geom_boxplot(notch=F)+
+geom_point(size=2)
+
+```
+
 
 Thanks to JHU for the data (https://github.com/CSSEGISandData/COVID-19). Results are only as good as the data, which is only as good as the amount of testing done. 
 
