--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -153,117 +153,6 @@ ggplot(comp.pc)+
 			 				 format(start_val*100,scientific=F,digits=4),
 			 				 '% of the population infected'))
 ```
-
-
-# World data
-
-This plot shows the spread of the virus over time across the world. We want the number of active cases  to drop to zero, the deaths to stay as low as possible, obviously, and the recovered cases to climb high. Confirmed is a cumulative count of everyone that has tested positive. 
-
-```{r world, echo=FALSE,fig.width = 5,fig.height=3}
-ggplot(covid %>%	 	group_by(date,type) %>% 
-			 	summarize(val=sum(val)) %>%
-			 	filter(type!='confirmed'))+
-	aes(date,val,fill=reorder(type,desc(type)))+
-	geom_bar(stat='identity')+
-	scale_y_continuous(label=comma,breaks=pretty_breaks(),
-										 sec.axis = sec_axis(~./7771316390,labels = percent))+
-		labs(x=element_blank(),y=element_blank(),color=element_blank(),
-				 fill=element_blank())+
-	theme(legend.position=c(.2,.8))
-```
-
-Here's another view of the same data.
-
-```{r, echo=FALSE,fig.width = 5,fig.height=3}
-
-
-# All lines for the world
-ggplot(covid %>% 
-			 	group_by(date,type) %>% 
-			 	summarize(val=sum(val)))+
-	aes(date,val,group=type,color=type)+
-	geom_line()+geom_point(size=.5)+
-	scale_y_continuous(label=comma,breaks=pretty_breaks(),
-										 sec.axis = sec_axis(~./7771316390,labels = percent))+
-	theme(legend.position = c(.2,.7))+
-	scale_x_date(breaks=pretty_breaks())+
-	labs(x=element_blank(),y=element_blank(),color=element_blank())
-```
-
-These plots show how the numbers have grown over time in each country. All countries want to hit the bent curve that China has reported achieving. 
-
-```{r world2}
-
-tmp<- group_by(covid,region,type,date) %>% 
-	filter(val>0,date>='2020-01-20') %>%
-	summarize(val=sum(val)) %>%
-	group_by(region) %>%
-	filter(max(val)>=1)
-
-labels<- group_by(tmp,region,type) %>% filter(date==max(date))  %>%
-	ungroup
-
-worst<- c(labels %>% 
-						group_by(region) %>% 
-						summarize(val=max(val)) %>% 
-						top_n(6,val) %>% 
-						pull(region) )
-
-ggplot(filter(tmp,region %in% worst))+theme_gray(12)+
-	aes(date,val,group=c(region),color=region)+
-	scale_y_continuous(limits = c(0,NA),
-										 label=comma,
-										 breaks=pretty_breaks(8)	)+
-	scale_x_date(breaks=pretty_breaks(10),
-							 limits = c(min(tmp$date),max(tmp$date)+4))+
-	geom_line()+geom_point(size=.5)+
-	theme(legend.position="none")+
-	facet_wrap(~type,scales = 'free',ncol=2)+
-	theme(legend.position="none",
-				axis.text.x = element_text(angle = 90, vjust = .5))+
-	labs(x="",y='count')+
-	geom_text_repel(data=labels %>%	filter(	(region %in% worst)| region=='US'),
-									direction='y',
-									segment.color='dark grey',
-									hjust=0,
-									seed=0,
-									aes(label=region,x=date),color='black')+
-		coord_x_date(xlim=c(min(tmp$date),max(tmp$date+18)))
-
-
-
-```
-
-
-# World Fatality Rates
-
-Here is a plot of the fatility rate. It's really hard to tell whether this analysis makes sense given the unreliablity of the data overall. FWIW:
-
-```{r fatality, echo=FALSE}
-rate<-  	inner_join(confirmed %>% filter(date==max(date)) %>%  group_by(region) %>% summarize(confirmed=sum(val)),
-										deaths %>%filter(date==max(date)) %>%  group_by(region) %>% summarize(deaths=sum(val)),
-										by = c("region")) %>%
-	# inner_join(recovered %>%filter(date==max(date)) %>%  group_by(region) %>%	summarize(recovered=sum(val)),
-	# by = c("region")) %>%
-	# filter(region!='Cruise Ship' ) %>%
-	# mutate(region=ifelse(region=='Korea, South',"S.Korea",region)) %>%
-	filter(deaths>0) %>% 
-	mutate(rate=deaths/(deaths+confirmed)) %>%  ungroup %>% 
-	rowwise %>%
-	mutate(ci=1.96*sqrt(rate*(1-rate)/(deaths+confirmed))) %>%  ungroup %>% 
-	group_by(region) %>% mutate(min_ci=min(ci)) 
-
-ggplot(rate %>% filter(deaths>15))+
-	aes(reorder(region,desc(rate)),rate)+
-	scale_y_continuous(label=percent,breaks=pretty_breaks(10))+
-	geom_bar(stat='identity')+
-	geom_text(aes(label=deaths,y=.001),color='yellow',hjust=0,angle=90)+
-	labs(x=element_blank(),y="fatality rate")+
-	theme(legend.position="none",
-				axis.text.x = element_text(angle = 90, vjust = .0,hjust=1))
-
-```
-
 # Massachusetts Data 
 
 MA data from https://github.com/b-lev/massachusetts-covid19-report-archive. 
@@ -624,6 +513,117 @@ ggplot(testing %>% select(date,total_per_cap,state) %>% na.omit)+
 # 	scale_y_continuous(limits = c(0,NA))+
 # 	# geom_boxplot(notch=F)+
 # 	geom_point(size=2)
+
+```
+
+
+
+# World data
+
+This plot shows the spread of the virus over time across the world. We want the number of active cases  to drop to zero, the deaths to stay as low as possible, obviously, and the recovered cases to climb high. Confirmed is a cumulative count of everyone that has tested positive. 
+
+```{r world, echo=FALSE,fig.width = 5,fig.height=3}
+ggplot(covid %>%	 	group_by(date,type) %>% 
+			 	summarize(val=sum(val)) %>%
+			 	filter(type!='confirmed'))+
+	aes(date,val,fill=reorder(type,desc(type)))+
+	geom_bar(stat='identity')+
+	scale_y_continuous(label=comma,breaks=pretty_breaks(),
+										 sec.axis = sec_axis(~./7771316390,labels = percent))+
+		labs(x=element_blank(),y=element_blank(),color=element_blank(),
+				 fill=element_blank())+
+	theme(legend.position=c(.2,.8))
+```
+
+Here's another view of the same data.
+
+```{r, echo=FALSE,fig.width = 5,fig.height=3}
+
+
+# All lines for the world
+ggplot(covid %>% 
+			 	group_by(date,type) %>% 
+			 	summarize(val=sum(val)))+
+	aes(date,val,group=type,color=type)+
+	geom_line()+geom_point(size=.5)+
+	scale_y_continuous(label=comma,breaks=pretty_breaks(),
+										 sec.axis = sec_axis(~./7771316390,labels = percent))+
+	theme(legend.position = c(.2,.7))+
+	scale_x_date(breaks=pretty_breaks())+
+	labs(x=element_blank(),y=element_blank(),color=element_blank())
+```
+
+These plots show how the numbers have grown over time in each country. All countries want to hit the bent curve that China has reported achieving. 
+
+```{r world2}
+
+tmp<- group_by(covid,region,type,date) %>% 
+	filter(val>0,date>='2020-01-20') %>%
+	summarize(val=sum(val)) %>%
+	group_by(region) %>%
+	filter(max(val)>=1)
+
+labels<- group_by(tmp,region,type) %>% filter(date==max(date))  %>%
+	ungroup
+
+worst<- c(labels %>% 
+						group_by(region) %>% 
+						summarize(val=max(val)) %>% 
+						top_n(6,val) %>% 
+						pull(region) )
+
+ggplot(filter(tmp,region %in% worst))+theme_gray(12)+
+	aes(date,val,group=c(region),color=region)+
+	scale_y_continuous(limits = c(0,NA),
+										 label=comma,
+										 breaks=pretty_breaks(8)	)+
+	scale_x_date(breaks=pretty_breaks(10),
+							 limits = c(min(tmp$date),max(tmp$date)+4))+
+	geom_line()+geom_point(size=.5)+
+	theme(legend.position="none")+
+	facet_wrap(~type,scales = 'free',ncol=2)+
+	theme(legend.position="none",
+				axis.text.x = element_text(angle = 90, vjust = .5))+
+	labs(x="",y='count')+
+	geom_text_repel(data=labels %>%	filter(	(region %in% worst)| region=='US'),
+									direction='y',
+									segment.color='dark grey',
+									hjust=0,
+									seed=0,
+									aes(label=region,x=date),color='black')+
+		coord_x_date(xlim=c(min(tmp$date),max(tmp$date+18)))
+
+
+
+```
+
+
+# World Fatality Rates
+
+Here is a plot of the fatility rate. It's really hard to tell whether this analysis makes sense given the unreliablity of the data overall. FWIW:
+
+```{r fatality, echo=FALSE,fig.width = 6,fig.height=4}
+rate<-  	inner_join(confirmed %>% filter(date==max(date)) %>%  group_by(region) %>% summarize(confirmed=sum(val)),
+										deaths %>%filter(date==max(date)) %>%  group_by(region) %>% summarize(deaths=sum(val)),
+										by = c("region")) %>%
+	# inner_join(recovered %>%filter(date==max(date)) %>%  group_by(region) %>%	summarize(recovered=sum(val)),
+	# by = c("region")) %>%
+	# filter(region!='Cruise Ship' ) %>%
+	# mutate(region=ifelse(region=='Korea, South',"S.Korea",region)) %>%
+	filter(deaths>0) %>% 
+	mutate(rate=deaths/(deaths+confirmed)) %>%  ungroup %>% 
+	rowwise %>%
+	mutate(ci=1.96*sqrt(rate*(1-rate)/(deaths+confirmed))) %>%  ungroup %>% 
+	group_by(region) %>% mutate(min_ci=min(ci)) 
+
+ggplot(rate %>% filter(deaths>15))+
+	aes(reorder(region,desc(rate)),rate)+
+	scale_y_continuous(label=percent,breaks=pretty_breaks(10))+
+	geom_bar(stat='identity')+
+	geom_text(aes(label=deaths,y=.001),color='yellow',hjust=0,angle=90)+
+	labs(x=element_blank(),y="fatality rate")+
+	theme(legend.position="none",
+				axis.text.x = element_text(angle = 90, vjust = .0,hjust=1))
 
 ```
 
