--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -1,8 +1,13 @@
 ---
 title: "COVis: covid-19 Visualizations"
+knit: (function(input_file, encoding) {
+  out_dir <- 'docs';
+  rmarkdown::render(input_file,
+ encoding=encoding,
+ output_file=file.path(dirname(input_file), out_dir, 'index.html'))})
 author: ""
 output:
-  github_document:
+  html_document:
   toc: true
   theme: cosmo
 ---
